syntax = "proto3";

package proto.v1;

import "proto/settings/v1/settings.proto";
import "proto/settings/v1/value.proto";

message PipelineTypeProto {
  string type = 1;
  repeated proto.settings.v1.SettingMetaProto settings = 2;
}

message PipelineProto {
  string name = 1;
  uint32 index = 2;
  string type = 3;
  map<string, proto.settings.v1.SettingValueProto> settings_values = 4;
}
